# Unilex

./: .gitignore  README.md  database.py  global_functions.py  main.py  pyproject.toml
cogs/: [].py  [fiximg.py  [getridof.py  [img.py  [mmi.py  reaction_rollclaim.py
data/: articles - Copy.db  articles.db  claims.db
