[project]
name = "artilex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord>=2.3.2",
    "discord-py>=2.5.2",
    "requests>=2.32.3",
    "ruff>=0.11.8",
]

[tool.ruff.lint]
select = [
    "A004", # Check for import shadowing builtin functions: https://docs.astral.sh/ruff/rules/builtin-import-shadowing/
    "RUF",
    "UP",
    "I",
    "ASYNC",
]
extend-ignore = [
    "ASYNC110", # I don't care
    "ASYNC221"
]
